[package]
name = "wgpu02"
version = "0.1.0"
authors = ["jack xu"]
edition = "2021"

[dependencies]
wgpu = "0.17"
cgmath = "0.18"
env_logger = "0.10"
futures = "0.3"
gfx-hal = "0.9"
image = "0.24"
log = "0.4"
pollster = "0.2"
winit = "0.28"
bytemuck = { version = "1.4", features = ["derive"] }
anyhow = "1.0"
rand ="0.8"